add footer section

--- a/index.html
+++ b/index.html
@@ -101,14 +101,23 @@
                     <img src="./icons/Website.png" alt="">
                 </div>
                 <div class="footer-contact-number">
-                    <p class="paragraph">+088 019787368</p>
-                    <p class="paragraph">www.md-dalim.com</p>
+                    <p class="paragraph inter">+088 019787368</p>
+                    <p class="paragraph inter">www.md-dalim.com</p>
                 </div>
             </div>
-
         </div>
-        <div class="footer-icon"></div>
-        <div class="footer-reserved"></div>
+        <hr>
+        <div class="footer-icon">
+            <img src="./icons/Facebook.png" alt="">
+            <img src="./icons/Instagram.png" alt="">
+            <img src="./icons/Linkedin.png" alt="">
+            <img src="./icons/Twitter.png" alt="">
+        </div>
+        <hr>
+        <div class="footer-reserved">
+            <p class="paragraph inter">2017, All Rights Reserved.</p>
+            <p class="paragraph inter">Unsubscribe</p>
+        </div>
     </footer>
 </body>
 </html>
